--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,58 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+
+# Arquivos gerados durante o desenvolvimento
+/node_modules
+
+# Arquivos de compilação e build
+/.next
+/out
+
+# Arquivos temporários
+/.pnp
+.pnp.js
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Arquivos de log e debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+error.log*
+
+# Arquivos de configuração local
+/.idea
+.vscode
+
+# Arquivos de cache
+/.cache
+
+# Arquivos de dependências do npm
+/package-lock.json
+
+# Arquivos de dependências do Yarn
+/yarn.lock
+
+# Arquivos de cache do npm
+.npm
+
+# Arquivos de cache do Yarn
+.yarn
+
+# Arquivos de backup
+*.bak
+
+# Arquivos de backup do Windows
+[Dd]esktop.ini
+$RECYCLE.BIN/
+
+# Arquivos de imagem
+Thumbs.db
+.DS_Store
+
+# Arquivos temporários de edição do VSCode
+*~
